# serializer version: 1
# name: test_platform_setup_and_discovery[switch.maui_indoor_only-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.maui_indoor_only',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:door',
    'original_name': 'Indoor Only',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indoor_only',
    'unique_id': '472721-indoor_only',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[switch.maui_indoor_only-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.maui_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.maui_indoor_only-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.maui_indoor_only',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:door',
    'original_name': 'Indoor Only',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indoor_only',
    'unique_id': '472721-indoor_only',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.maui_indoor_only-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.maui_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
